--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 		</ul>
 	</div>
 	<div id="slika">
-	<h1>promena</h1>
+	<h1>promena nova</h1>
 	</div>
-	<div class="cistac"></div>
+	<div class="cistac">Cistac</div>
 	<div class="okvir">
 		<h2>Dinamički sadržaj && Filtriranje && Sortiranje</h2>
 		<div id="filtriranjeSortiranje">
