--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<div id="filteri">
 					<!-- Filtriranje -->
 					<div id="filtriranje">
-						<label for="sortMarka">Sortiraj prema marki opadajuce: </label>
+						<label for="sortMarka">Sordasdtiraj prema marki opadajuce: </label>
 						<input type="button" name="dugme" id="sortMarka" value="Sortiraj artikle" /><br /><br />
 						<form action="" method="">
 							<label for="tbNaslov">Pronadji model: </label>
