--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					</li>
 
 				</ul>
-				<h4>25.999 RSD</h4>
+				<h4>25.999dsad RSD</h4>
 				<a class="korpaText" href="#" data-id="___">DODAJ U KORPU</a>
 			</div>
 		</div>
